Update CSS imports and fix backdrop clipping

--- a/media_stack/jellyfin.css
+++ b/media_stack/jellyfin.css
@@ -1,4 +1,3 @@
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/presets/kaleidochromic_preset.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/fixes.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/jf_font.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/base.css');
@@ -6,21 +5,20 @@
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/rounding.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/smallercast.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/header/header_transparent.css');
+@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/episodelist/episodes_grid.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/login/login_minimalistic.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/fields/fields_noborder.css');
+@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/fields/fields_border.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/cornerindicator/indicator_floating.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/type/colorful.css');
-@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/titlepage/title_banner-logo.css');
+@import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/titlepage/title_simple-logo.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/progress/floating.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/effects/hoverglow.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/effects/glassy.css');
 @import url('https://cdn.jsdelivr.net/gh/CTalvio/Ultrachromic/effects/pan-animation.css');
-@import url('https://ctalvio.github.io/Monochromic/backdrop-hack_style.css');
 
 /*Fix backdrop clipping issue*/
-#loginPage.backdropPage {
+#loginPage {
     background: transparent !important;
-    background-color: transparent !important;
 }
 
 /*Accent and roundingd*/
